--- a/README.adoc
+++ b/README.adoc
@@ -7,6 +7,8 @@ sudo minikube start
 minikube addons enable ingress
 kubectl delete deployment,service echoserver
 kubectl delete ingress kubernetes-ingress-hello-world
+kubectl delete secret tls-certificate
+kubectl delete secret tls-dhparam
 
 eval $(sudo minikube docker-env)
 docker build -t hello-service hello-service/ 
@@ -24,17 +26,30 @@ kubectl run paris --image=hello-service:latest --image-pull-policy=Never --env="
 kubectl expose deployment paris --type=NodePort
 sudo minikube service paris
 
+
+
+openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /tmp/tls.key -out /tmp/tls.crt -subj "/CN=greetings.toall"
+# generate a key used to get "Perfect Forward Secrecy" in nginx:
+# openssl dhparam -out /tmp/dhparam.pem 4096
+# ..or do the fast way for testing:
+openssl dhparam -out /tmp/dhparam.pem 512
+kubectl create secret tls tls-certificate --key /tmp/tls.key --cert /tmp/tls.crt
+kubectl create secret generic tls-dhparam --from-file=/tmp/dhparam.pem
+
 minikube addons enable ingress
-kubectl create -f kubernetes-ingress-hello-world.yaml
+kubectl create --validate=false -f kubernetes-ingress-hello-world.yaml
 kubectl describe ing kubernetes-ingress-hello-world
 
 echo "$(sudo minikube ip) echo.toall greetings.toall" | sudo tee -a /etc/hosts
+
+kubectl get pods --all-namespaces --watch
+
 ----
 
+
 # recommended readings:
-https://github.com/kubernetes/ingress-nginx/tree/master/deploy#minikube[kubernetes howto: nginx ingress]
-https://github.com/nginxinc/kubernetes-ingress/blob/master/docs/nginx-ingress-controllers.md[nginx howto: own ingress controller]
-https://medium.com/@Oskarr3/setting-up-ingress-on-minikube-6ae825e98f82[howto: setting up ingress on minikube]
-https://medium.com/@gokulc/setting-up-nginx-ingress-on-kubernetes-2b733d8d2f45[howto: nginx ingress with ssl]
-
-
+* https://github.com/kubernetes/ingress-nginx/tree/master/deploy#minikube[kubernetes howto: nginx ingress]
+* https://github.com/nginxinc/kubernetes-ingress/blob/master/docs/nginx-ingress-controllers.md[nginx howto: own ingress controller]
+* https://medium.com/@Oskarr3/setting-up-ingress-on-minikube-6ae825e98f82[howto: setting up ingress on minikube]
+* https://github.com/kubernetes/contrib/tree/master/ingress/controllers/nginx/examples/tls[howto: nginx ingress ssl termination]
+* https://github.com/kubernetes/ingress-nginx/issues/1374[issue: nginx ingress certificate]
